--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,38 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
 .logo {
-  height: 6em;
+  display: inline-block;
+  height: 64px;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 1em #646cffaa);
 }
+
+.logo.react {
+  height: 5em;
+  animation: logo-spin infinite 20s linear;
+}
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+.logo-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  width: 100%;
+  /* max-width: 800px;*/      /* adjust to match your design */
+  margin: 0 auto 2rem auto;
+  /* gap: 200px; */
 }
 
 @keyframes logo-spin {
@@ -27,11 +44,13 @@
   }
 }
 
+/*
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
 }
+*/
 
 .card {
   padding: 2em;
