--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,13 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* my variables */
+  --qd-red: #b71234;
+}
+
+.qd-red {
+  color: var(--qd-red);
 }
 
 a {
@@ -33,6 +40,11 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+h2 {
+    /* color: var(--qd-red); */
+    /* #b71234; */
 }
 
 button {
