--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 :root {
   font-family: Play, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  /* line-height: 1.5; */
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
+  color: #fff;
   background-color: #242424;
 
   font-synthesis: none;
@@ -39,7 +40,7 @@ body {
 
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
+  /* line-height: 1.1; */
 }
 
 h2 {
